# librouteros

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  README.md  _config.yml  configure.ac  index.md
doc/: Makefile.am  librouteros.pod  ros.pod
src/: Makefile.am  interface.c  main.c  registration_table.c  ros.c  ros_parse.c  ros_parse.h  routeros_api.h  routeros_version.h.in  system_health.c  system_resource.c
